# high-protein-high-fiber-cookbook

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  cli.py  docker-compose.yml  pyproject.toml
data/: high_protein_high_fiber_guidelines.yaml  ingredient_categories.json
docs/: high_protein_high_fiber_guidelines.md
scripts/: build_csv.py  run_image_only.py
src/: config.py  constants.py
src/cooking/: method_checker.py  quantity_checker.py
src/dedup/: checker.py
src/diet_rules/: base_rule.py  engine.py  rules.py  spec.py
src/llm/: client.py  output_schemas.py
src/llm/prompts/: alias_resolver.py  critic.py  draft.py  format.py  ideation.py  image_critic.py  image_prompt.py  nutrition.py
src/models/: diet.py  meal_plan.py  nutrition.py  recipe.py
src/nutrition/: qualifiers.py  usda_loader.py
src/output/: cooking_time_parser.py  csv_export.py  formatter.py  meal_plan_formatter.py
src/output/pdf/: __init__.py  renderer.py
src/output/pdf/assets/: meal_plan.css  meal_plan.html.j2  (+2 more)
src/planning/: alias_cache.py  course_list.py  manifest.py  meal_planner.py  personalization.py  recipe_loader.py  user_profile.py  week_slicer.py
src/recipe_pipeline/: batch_state.py  orchestrator.py  review.py  stage_01_ideation.py  stage_02_draft.py  stage_03_diet_check.py  stage_04_nutrition.py  stage_05_cooking.py  stage_05b_critic.py  stage_06_format.py  stage_07_image.py
tests/: test_cli_helpers.py  test_meal_planner_personalized.py  test_nutrition.py  test_personalization.py  test_qualifiers.py  test_recipe_pipeline.py  test_user_profile_loader.py
